# tele_dir-release

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  README.md  debian.store  package.xml  package.xml~  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
debian/: changelog  control  gbp.conf  rules
rpm/: ros-indigo-tele-dir.spec  template.spec
src/: AuxFuns.py  KeyBinding.py  TeleDir.py  XmlHandler.py
src/Configs/: default_config.xml  drone_config.xml  drone_config2.xml  pr2.xml
src/Tests/: XmlHandler_Testing.py
